erDiagram

%% ── f000 — pessoa, login, preferências, centro de custo (fatia-base) ──────

    F000_PERSON {
        CHAR(36) ID PK
        VARCHAR(255) TXT_NAME
        VARCHAR(20) TXT_LOCALE
        VARCHAR(20) TXT_LANGUAGE
        TIMESTAMP TMS_CREATE_AT
        TIMESTAMP TMS_UPDATED_AT
    }

    F000_USER {
        CHAR(36) ID PK
        CHAR(36) COD_PERSON FK
        VARCHAR(120) TXT_USERNAME
        CHAR(1) FLG_ACTIVE
        TIMESTAMP TMS_CREATE_AT
        TIMESTAMP TMS_UPDATED_AT
    }

    F000_PERSON ||--|{ F000_USER : ""

%% Últimas 5 senhas do usuário
    F000_USER_CREDENTIAL {
        CHAR(36) ID PK
        CHAR(36) COD_USER PK
        VARCHAR(20) TXT_PASSWORD
        TIMESTAMP TMS_CREATE_AT
    }

    F000_USER ||--|{ F000_USER_CREDENTIAL : ""

    F000_PREFERENCES {
        CHAR(36) COD_PERSON PK, FK
        VARCHAR(20) TXT_PREFERENCE
        VARCHAR(60) TXT_VALUE
        TIMESTAMP TMS_CREATE_AT
        TIMESTAMP TMS_UPDATED_AT
    }
    F000_PERSON ||--o{ F000_PREFERENCES : ""

%% Fixo, Variável
    F000_COST_CENTER {
        CHAR(36) ID PK
        CHAR(1) FLG_ACTIVE
        VARCHAR(50) TXT_DESCRIPTION
    }

%% Fila de exclusão cross-slice: F999 grava aqui, job de 5 min drena
    F999_DELETION_QUEUE {
        CHAR(36) ID PK
        VARCHAR(40) TXT_TYPE
        CHAR(36) COD_TARGET
        CHAR(36) COD_PERSON FK
        INT NUM_ATTEMPTS
        CHAR(1) FLG_LOCKED
        TIMESTAMP TMS_CREATE_AT
        TIMESTAMP TMS_UPDATED_AT
    }
    F000_PERSON ||--o{ F999_DELETION_QUEUE : ""

%% ── lookups globais (SYS_*) ─────────────────────────────────────────────

%% CHECKING, INVESTMENT
    SYS_ACCOUNT_TYPE {
        CHAR(36) ID PK
        CHAR(1) FLG_ACTIVE
        VARCHAR(50) TXT_DESCRIPTION
    }

%% SCHEDULED, CONFIRMED, PENDING
    SYS_STATUS {
        VARCHAR(20) ID PK
        CHAR(1) FLG_ACTIVE
        VARCHAR(50) TXT_DESCRIPTION
    }

%% EXPENSE, INCOME
    SYS_TRANSACTION_NATURE {
        CHAR(36) ID PK
        VARCHAR(10) TXT_DESCRIPTION
    }

%% ── f002 — contas (+ balance fundido) ──────────────────────────────────

%% TXT_COLOR é o único dado antes separado em PERSON_ACCOUNT; resto vem de MON_ACCOUNT
    F002_ACCOUNT {
        CHAR(36) ID PK
        CHAR(36) COD_PERSON FK
        CHAR(36) TXT_TYPE FK
        VARCHAR(80) TXT_NAME
        VARCHAR(20) TXT_COLOR
        DECIMAL DEC_CREDIT_LIMIT
        DECIMAL DEC_OVERDRAFT_LIMIT
        INT NUM_CLOSING_DAY
        INT NUM_DUE_DAY
        CHAR(1) FLG_ACTIVE
        TIMESTAMP TMS_CREATE_AT
        TIMESTAMP TMS_UPDATED_AT
    }

    F000_PERSON ||--o{ F002_ACCOUNT : ""
    SYS_ACCOUNT_TYPE ||--o{ F002_ACCOUNT : ""

%% Snapshot por período; FLG_DIRTY marca recomputo pendente pro job de F999
    F002_BALANCE {
        CHAR(36) ID PK
        CHAR(36) COD_PERSON FK
        CHAR(36) COD_ACCOUNT PK, FK
        NUMERIC(6) NUM_PERIOD PK
        DECIMAL DEC_BALANCE
        CHAR(1) FLG_DIRTY
        TIMESTAMP TMS_CREATE_AT
        TIMESTAMP TMS_UPDATED_AT
    }

    F002_ACCOUNT ||--o{ F002_BALANCE : ""

%% ── f003 — cartões de crédito ───────────────────────────────────────────

%% Cartão é identificado só pelo last4; vinculado a uma conta real
    F003_CARD {
        CHAR(36) ID PK
        CHAR(36) COD_PERSON FK
        CHAR(36) COD_ACCOUNT FK
        CHAR(4) TXT_LAST4
        CHAR(1) FLG_ACTIVE
        TIMESTAMP TMS_CREATE_AT
        TIMESTAMP TMS_UPDATED_AT
    }

    F000_PERSON ||--o{ F003_CARD : ""
    F002_ACCOUNT ||--o{ F003_CARD : ""

%% ── f004 — tags ─────────────────────────────────────────────────────────

    F004_TAG {
        CHAR(36) ID PK
        CHAR(36) COD_PERSON PK
        VARCHAR(20) TXT_COLOR
        VARCHAR(20) TXT_DESCRIPTION
        CHAR(1) FLG_ACTIVE
        TIMESTAMP TMS_CREATE_AT
        TIMESTAMP TMS_UPDATED_AT
    }
    F000_PERSON ||--o{ F004_TAG : ""

%% ── f005 — categorias ───────────────────────────────────────────────────

%% Inclui as 2 categorias globais de transferência, de dono o usuário SYSTEM
    F005_CATEGORY {
        CHAR(36) ID PK
        CHAR(36) COD_PERSON FK
        CHAR(36) COD_PARENT FK
        CHAR(36) COD_NATURE FK
        VARCHAR(80) TXT_NAME
        CHAR(1) FLG_SYSTEM
        CHAR(1) FLG_ACTIVE
        TIMESTAMP TMS_CREATE_AT
        TIMESTAMP TMS_UPDATED_AT
    }

    F000_PERSON ||--o{ F005_CATEGORY : ""
    SYS_TRANSACTION_NATURE ||--o{ F005_CATEGORY : ""

%% ── f006 — lançamentos e transferências ─────────────────────────────────

    F006_TRANSACTION {
        CHAR(36) ID PK
        CHAR(36) COD_PERSON FK
        VARCHAR(255) TXT_DESCRIPTION
        NUMERIC(1) NUM_SIGNAL
        DECIMAL DEC_AMOUNT
        TIMESTAMP TMS_PURCHASE
        CHAR(36) COD_ACCOUNT FK
        CHAR(36) COD_CARD FK
        CHAR(36) COD_COST_CENTER FK
        CHAR(36) COD_STATUS FK
        DATE DAT_PAYMENT
        CHAR(36) GROUP_ID
        INT NUM_INSTALLMENT
        INT NUM_INSTALLMENT_TOTAL
        VARCHAR(1000) TXT_NOTES
        TIMESTAMP TMS_CREATE_AT
        TIMESTAMP TMS_UPDATED_AT
    }

    F000_PERSON ||--o{ F006_TRANSACTION : ""
    F002_ACCOUNT ||--o{ F006_TRANSACTION : ""
    F003_CARD |o--o{ F006_TRANSACTION : ""
    F000_COST_CENTER ||--o{ F006_TRANSACTION : ""
    SYS_STATUS ||--o{ F006_TRANSACTION : ""

%% Vínculo transação↔categoria — dono é f006 (a transação), não f005 (a categoria em si);
%% hoje 1:1 (cada transação tem exatamente 1 categoria)
    F006_TRANSACTION_CATEGORY {
        CHAR(36) COD_TRANSACTION PK, FK
        CHAR(36) COD_PERSON PK, FK
        CHAR(36) COD_CATEGORY FK
    }
    F005_CATEGORY ||--o{ F006_TRANSACTION_CATEGORY : ""
    F006_TRANSACTION ||--o{ F006_TRANSACTION_CATEGORY : ""

%% Vínculo transação↔tag — dono é f006 (a transação), não f004 (a tag em si)
    F006_TRANSACTION_TAG {
        CHAR(36) COD_TRANSACTION PK, FK
        CHAR(36) COD_PERSON PK, FK
        CHAR(36) COD_TAG PK, FK
    }
    F004_TAG ||--o{ F006_TRANSACTION_TAG : ""
    F006_TRANSACTION ||--o{ F006_TRANSACTION_TAG : ""

%% ── f010 — regras de nomenclatura ────────────────────────────────────────
%% Casamento de texto (nome → conta/categoria/centro de custo) é 100% client-side; sem FK real nas
%% referências de dados (COD_ACCOUNT/COD_CATEGORY), mesma convenção de F006_TRANSACTION.

    F010_IMPORT_RULE {
        CHAR(36) ID PK
        CHAR(36) COD_PERSON PK
        VARCHAR(255) TXT_NAME
        CHAR(36) COD_ACCOUNT
        CHAR(36) COD_CATEGORY
        CHAR(36) COD_COST_CENTER
        TIMESTAMP TMS_CREATE_AT
    }
    F000_PERSON ||--o{ F010_IMPORT_RULE : ""
